Seo, Header, Footer and banner done

--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- <html lang="da"> -->
+  <html lang="da">
 
   <head>
     <!-- facebook Open Graph meta tags -->
-    <meta property="og:title" content="______" />
-    <meta property="og:url" content="______" />
-    <meta property="og:image" content="%PUBLIC_URL%/seo_pics/______" />
-    <!-- <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" /> -->
+    <meta property="og:title" content="Det Utrolige Teater" />
+    <meta property="og:url" content="detutroligeteater.dk" />
+    <meta property="og:image" content="%PUBLIC_URL%/seoIcons/Icons_72x72" />
     <meta property="og:type" content="website" />
     <meta property="og:description"
-        content="______" />
-    <meta property="og:locale" content="en" />
+        content="Nystartet familieteater" />
+    <meta property="og:locale" content="da" />
     <!-- facebook Open Graph meta tags ends here -->
 
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/seo_pics/______">
-    <title>______</title>
-    <meta name="title" content="______" />
+    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/seoIcons/Icons_72x72">
+    <title>Det Utrolige Teater</title>
+    <meta name="title" content="Det Utrolige Teater" />
     <meta name="description"
-        content="______">
+        content="Det Utrolige Teater">
     <meta name="keywords"
-        content="______">
+        content="Nystartet, Utrolige, Teater, familieteater">
     <meta name="robots" content="all" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- PWA stuff goes here -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" defer>
-    <!-- <script src="%PUBLIC_URL%/serviceWorker.js" defer></script> -->
-    <meta name="theme-color" content="______"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/seo_pics/______">
+    <script src="%PUBLIC_URL%/serviceWorker.js" defer></script>
+    <meta name="theme-color" content="#D39D5B"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/seoIcons/Icons_72x72">
     <meta name="color-scheme" content="light only">
     
     <script defer>
