--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- facebook Open Graph meta tags -->
     <meta property="og:title" content="Det Utrolige Teater" />
     <meta property="og:url" content="detutroligeteater.dk" />
-    <meta property="og:image" content="%PUBLIC_URL%/seoIcons/Icons_72x72" />
+    <meta property="og:image" content="%PUBLIC_URL%/seoIcons/Icons_72x72.svg" />
     <meta property="og:type" content="website" />
     <meta property="og:description"
         content="Nystartet familieteater" />
@@ -13,7 +13,7 @@
     <!-- facebook Open Graph meta tags ends here -->
 
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/seoIcons/Icons_72x72">
+    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/seoIcons/Icons_72x72.svg">
     <title>Det Utrolige Teater</title>
     <meta name="title" content="Det Utrolige Teater" />
     <meta name="description"
@@ -28,7 +28,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" defer>
     <script src="%PUBLIC_URL%/serviceWorker.js" defer></script>
     <meta name="theme-color" content="#D39D5B"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/seoIcons/Icons_72x72">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/seoIcons/Icons_72x72.svg">
     <meta name="color-scheme" content="light only">
     
     <script defer>
